# AutoChord_demo

./: .gitignore  DATASET.md  QUICKSTART.md  README.md  RUN_COMMANDS.md  RUN_COMMANDS_WINDOWS.md  analyze_model.py  analyze_with_robust_key.py  chord&key_analyzer_gui old.py  chord&key_analyzer_gui.py  chord_analyzer_cqt.py  chord_analyzer_stft.py  chord_player_app.py  compare_features.py  evaluate_accuracy.py  evaluate_key_detection.py  export_models_for_juce.py  generate_chord_progressions.py  generate_long_progressions.py  generate_long_progressions_piano.py  generate_single_chords.py  generate_tonal_progressions.py  key_detector_robust.py  predict_chord.py  predict_chord_cqt.py  predict_chord_stft.py  realtime_chord_analyzer.py  test_model.py  test_model__.py  train_chord_cqt.py  train_chord_stft.py
AutoChordPlugin/: CMakeLists.txt  QUICKSTART.md  README.md
AutoChordPlugin/Source/: ChordRecognizer.cpp  ChordRecognizer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
